menu spacing fix

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body{
 	margin-right:10px;
 }
 #menu-wrap li a{
-	padding-left:8px;
-	padding-right:8px;
+	padding-left:3px;
+	padding-right:3px;
 	padding-top:15px;
 	color:#000;
 	height:35px;
@@ -43,8 +43,7 @@ body{
 }
 #menu-wrap li a:hover{
 	background:#f3f3f3;
-	color:#444;
-	text-shadow: 1px 1px 1px #fff;
+	color:#333;
 }
 #page_wrap{
 	width:880px;
